--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "require": {
         "vlucas/phpdotenv": "^5.5",
-        "doctrine/dbal": "^3.6",
-        "twig/twig": "^3.6"
+        "twig/twig": "^3.6",
+        "doctrine/dbal": "^3.6"
     }
 }
